--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -3388,3 +3388,821 @@ def get_all_possible_string(s):
 	get_all_possible_string_utils(s, res, 1, s[0])
 	return res
 ```
+
+
+### 字符串的数值运算
+
+[Multiply Large Numbers represented as Strings - GeeksforGeeks](https://www.geeksforgeeks.org/multiply-large-numbers-represented-as-strings/)
+
+[Divide large number represented as string - GeeksforGeeks](https://www.geeksforgeeks.org/divide-large-number-represented-string/)
+
+
+
+### 字符串是否一一映射
+
+[Isomorphic Strings Check - GeeksforGeeks](https://www.geeksforgeeks.org/check-if-two-given-strings-are-isomorphic-to-each-other/)
+
+判断两个字符串是否能一一对应，基本思路为统计每个字符串每个字母的首次出现位置，如果相同的话就证明，两个字母出现的位置相同（只需要记录首次出现即可，因为如果后续不匹配，就会遇到不同的字母，结果自然不同）
+
+```python
+def areIsomorphic(self,s1,s2):
+	d1 = {}
+	d2 = {}
+	
+	if len(s1) != len(s2):
+		return False
+	
+	for i in range(len(s1)):
+		if s1[i] not in d1:
+			d1[s1[i]] = i
+		
+		if s2[i] not in d2:
+			d2[s2[i]] = i
+			
+		if d1[s1[i]] != d2[s2[i]]:
+			return False
+	return True
+```
+
+
+### 判断字符串是否为其它两个字符串的插值
+
+[Check if a String is Interleaving of Other Two - GeeksforGeeks](https://www.geeksforgeeks.org/find-if-a-string-is-interleaved-of-two-other-strings-dp-33/)
+
+给定三个字符串，判断第三个字符串是否是另外两个字符串的插值。
+
+#### 回溯法
+
+用 `i` 和 `j` 分别索引前两个字符串，然后 `i + j` 索引第三个字符串
+
+```python
+def interleave(s1, s2, s3, i, j):
+
+    if i == len(s1) and j == len(s2) and i + j == len(s3):
+        return True
+    
+    # 如果 s3[i+j] 为 s1 的第i个元素，继续匹配 s1的下一个元素
+    a = i < len(s1) and s3[i+j] == s1[i] and interleave(s1, s2, s3, i+1, j)
+    b = j < len(s2) and s3[i+j] == s2[j] and interleave(s1, s2, s3, i, j+1)
+    return a or b
+
+def solve(s1, s2, s3):
+    if len(s1) + len(s2) != len(s3):
+        print(False)
+        return
+    res = interleave(s1, s2, s3, 0, 0)
+    print(res)
+```
+
+
+#### 动态规划
+
+。。。
+
+
+
+### 获取字符串所有的置换结果
+
+[Permutations of given String - GeeksforGeeks](https://www.geeksforgeeks.org/write-a-c-program-to-print-all-permutations-of-a-given-string/)
+
+
+
+![](https://media.geeksforgeeks.org/wp-content/uploads/20250106173028544574/4.webp)
+
+
+```python
+def recurPermute(index, s, ans):
+
+    # Base Case
+    if index == len(s):
+        ans.append("".join(s))
+        return
+
+    # Swap the current index with all
+    # possible indices and recur
+    for i in range(index, len(s)):
+        s[index], s[i] = s[i], s[index]
+        recurPermute(index + 1, s, ans)
+        s[index], s[i] = s[i], s[index]
+
+# Function to find all unique permutations
+def findPermutation(s):
+
+    # Stores the final answer
+    ans = []
+
+    recurPermute(0, list(s), ans)
+
+    # sort the resultant list
+    ans.sort()
+    return ans
+```
+
+
+### 最长回文字符串
+
+[Longest Palindromic Substring - GeeksforGeeks](https://www.geeksforgeeks.org/longest-palindromic-substring/)
+
+
+
+
+### 回文字符串的最小切割
+
+[Palindrome Partitioning - GeeksforGeeks](https://www.geeksforgeeks.org/palindrome-partitioning-dp-17/)
+
+对一个字符串进行切割，使其每个子字符串都是回文的，求最小切割次数
+
+递归：对问题进行分析，首先需要编写一个判断回文的函数，递归过程中输入字符串，子字符串的起始点和终点，对这两个点之间的每一个点都尝试一次切割，取其中的最小值
+
+```python
+import sys
+
+# Function to check if a substring is a palindrome
+def isPalindrome(s, i, j):
+    while i < j:
+        if s[i] != s[j]:
+            return False
+        i += 1
+        j -= 1
+    return True
+
+# Recursive function to find the minimum number 
+# of cuts needed for palindrome partitioning
+def palPartitionRec(s, i, j):
+    if i >= j or isPalindrome(s, i, j):
+        return 0
+
+    res = sys.maxsize
+    
+    for k in range(i, j):
+        cuts = 1 + palPartitionRec(s, i, k) \
+                 + palPartitionRec(s, k + 1, j)
+        res = min(res, cuts)
+
+    return res
+
+def palPartition(s):
+    return palPartitionRec(s, 0, len(s) - 1)
+```
+
+
+加上矩阵存储状态
+
+```python
+# Function to check if a substring is a palindrome
+def isPalindrome(s, i, j):
+    while i < j:
+        if s[i] != s[j]:
+            return False
+        i += 1
+        j -= 1
+    return True
+
+# Recursive function to find the minimum number of
+# cuts needed for palindrome partitioning
+def palPartitionRec(s, i, j, memo):
+  
+    # Check memo for previously computed results
+    if memo[i][j] != -1:
+        return memo[i][j]
+
+    # Base case: If the substring is empty or 
+    # a palindrome, no cuts needed
+    if i >= j or isPalindrome(s, i, j):
+        memo[i][j] = 0
+        return 0
+
+    res = sys.maxsize
+
+    # Iterate through all possible partitions and
+    # find the minimum cuts needed
+    for k in range(i, j):
+        cuts = 1 + palPartitionRec(s, i, k, memo) \
+        + palPartitionRec(s, k + 1, j, memo)
+        res = min(res, cuts)
+
+    memo[i][j] = res
+    return res
+
+def palPartition(s):
+    n = len(s)
+    memo = [[-1 for _ in range(n)] for _ in range(n)]
+    return palPartitionRec(s, 0, n - 1, memo)
+```
+
+
+使用动态规划，在计算是否是回文字符串时也采用了动态规划的方法
+
+```python
+int palPartition(string& s) {
+    int n = s.length();
+
+    // dp[i][j] = Minimum number of cuts needed for
+    // palindrome partitioning of substring s[i..j]
+    int dp[n][n];
+
+    // isPalin[i][j] = true if substring s[i..j] 
+      // is palindrome,else false
+    bool isPalin[n][n];
+
+    // Every substring of length 1 is a palindrome
+    for (int i = 0; i < n; i++) {
+        isPalin[i][i] = true;
+        dp[i][i] = 0;
+    }
+
+    for (int len = 2; len <= n; len++) {
+
+        // Build solution for all substrings s[i ... j] 
+          // of length len
+        for (int i = 0, j = i + len - 1; j < n ; i++, j++) {
+          
+            // If len is 2, then we just need to
+            // compare two characters. 
+            if (len == 2)
+                isPalin[i][j] = (s[i] == s[j]);
+            else
+                isPalin[i][j] = (s[i] == s[j]) && 
+                                      isPalin[i + 1][j - 1];
+
+            // IF s[i..j] is palindrome, then dp[i][j] is 0
+            if (isPalin[i][j] == true)
+                dp[i][j] = 0;
+            else {
+
+            // Make a cut at every possible location starting 
+              // from i to j, and get the minimum cost cut.
+                dp[i][j] = INT_MAX;
+                for (int k = i; k <= j - 1; k++)
+                    dp[i][j] = min(dp[i][j], 1 + 
+                                   dp[i][k] + dp[k + 1][j]);
+            }
+        }
+    }
+
+    // Return the min cut value for
+    // complete string. i.e., s[0..n-1]
+    return dp[0][n - 1];
+}
+```
+
+
+上面这一方法还能继续优化，先动态规划计算子字符串是否为回文字符串，然后用dp表示 0 到 i的字符串的最小切分次数，如果`0`到`i`不是回文字符串，就在 `1` 到 `i` 之间重新划分起点。
+
+```python
+def generatePal(s, isPalin):
+    n = len(s)
+
+    # Substring s[i .. i] of len 1 
+    # is always palindromic
+    for i in range(n):
+        isPalin[i][i] = True
+
+    # Iterate over different lengths of substrings
+    for length in range(2, n + 1):
+        for i in range(n - length + 1):
+            j = i + length - 1
+
+            # Check whether s[i] == s[j] and the
+            # substring between them is a palindrome
+            if s[i] == s[j] and (length == 2 or isPalin[i + 1][j - 1]):
+              
+                # Mark the substring from i to j as a palindrome
+                isPalin[i][j] = True
+
+# Function to calculate the minimum number of cuts required
+# to make all substrings of 's' palindromic
+def palPartition(s):
+    n = len(s)
+
+    # 2D array to store whether substring s[i, j] is a palindrome or not
+    isPalin = [[False] * n for _ in range(n)]
+
+    generatePal(s, isPalin)
+
+    # dp[i] stores minimum cuts for Palindrome Partitioning of substring s[0...i] 
+    dp = [n] * n
+
+    # There is no cut required for single character as it is always palindrome
+    dp[0] = 0
+
+    # Iterate over the given string
+    for i in range(1, n):
+
+        # Check if string 0 to i is palindrome.
+        if isPalin[0][i]:
+            # if palindrome then cuts required is 0
+            dp[i] = 0
+        else:
+            for j in range(1, i+1):
+                # if substring s[j...i] is palindromic
+                # then we can make a cut over here
+                if isPalin[j][i]:
+                    # update dp[i] with minimum cuts
+                    dp[i] = min(dp[i], 1 + dp[j - 1])
+
+    # Return the minimum cuts required 
+    # for the entire string 's'
+    return dp[n - 1]
+```
+
+
+### 打印所有的回文字符串（拆分字符串）
+
+[Print all Palindromic Partitions of a String using Backtracking - GeeksforGeeks](https://www.geeksforgeeks.org/given-a-string-print-all-possible-palindromic-partition/)
+
+首先拆分字符串为子字符串，然后判断子字符串是否是回文字符串
+
+拆分子字符串的代码为
+
+```python
+def palPartitionRec(s, idx, p, sols):
+	if idx == len(s):
+		sols.append(p[:])
+		return
+	temp = ""
+	for i in range(idx, len(s)):
+		temp += s[i]
+		
+		p.append(temp)
+		palPartitionRec(s, i+1, p, sols)
+		p.pop()
+sols = []
+palPartitionRec(s, 0, [], sols)
+print(sols)
+```
+
+只需要加上判断temp是否为回文的条件即可
+```python
+def allPalindromicPerms(s):
+	# code here 
+	def is_palindrome(s):
+		return s == s[::-1]
+	
+	def _all_palindrome(s, idx, res, sols):
+		
+		if idx == len(s):
+			sols.append(res[:])
+			return
+		
+		temp = ""
+		for i in range(idx, len(s)):
+			temp += s[i]
+			if is_palindrome(temp):
+				res.append(temp)
+				_all_palindrome(s, i+1, res, sols)
+				res.pop()
+	
+	sols = []
+	_all_palindrome(s, 0, [], sols)
+	return sols
+```
+
+### 判断一个字符串是否是scramble
+
+[Check if a string is a scrambled form of another string - GeeksforGeeks](https://www.geeksforgeeks.org/check-if-a-string-is-a-scrambled-form-of-another-string/)
+
+
+### 判断一句话能否被给定词表分解
+
+[Word Break - GeeksforGeeks](https://www.geeksforgeeks.org/word-break-problem-dp-32/)
+
+判断一句话能否被给定的词表分解，使用动态规划的方法，通过一个数组保存 `s[0:i+1]` 时是否可以被分，如果可以，就尝试一下在 `i+1` 之后是否存在可以被分解的，每次只取最短的一种可能。
+
+```python
+def wordBreak(s, dictionary):
+	# Complete this function
+	n = len(s)
+	dp = [False for _ in range(n)]
+
+	for i in range(n):
+		
+		if (not dp[i] and s[:i+1] in dictionary):
+			dp[i] = True
+		
+		if dp[i]:
+
+			if i == n-1:
+				return True
+			
+			for j in range(i, n):
+				if (not dp[j] and s[i+1:j+1] in dictionary):
+					dp[j] = True
+				
+				if dp[j] and j == n-1:
+					return True
+	return False
+```
+
+
+## 回溯（递归）
+
+
+将大问题拆分为小问题
+
+
+### 十进制转二进制
+
+```python
+def decimal2Binary(num):
+    res = ""
+    if num < 2:
+        return str(num)
+    res += decimal2Binary(num // 2) + str(num % 2)
+    return res
+```
+
+
+
+### 反转队列
+
+[Reversing a queue using recursion - GeeksforGeeks](https://www.geeksforgeeks.org/reversing-queue-using-recursion/)
+
+先取出最前面的元素，再反转剩下的队列，反转好之后，将最前面的元素加到最后。
+
+
+```python
+def reverse_queue(queue: Queue):
+    # Base case
+    if queue.empty():
+        return
+ 
+    # Dequeue current item (from front)
+    item = queue.queue[0]
+    queue.get()
+ 
+    # Reverse remaining queue
+    reverse_queue(queue)
+ 
+    # Enqueue current item (to rear)
+    queue.put(item)
+```
+
+
+
+### 硬币之和问题
+
+[Coin Change - Count Ways to Make Sum - GeeksforGeeks](https://www.geeksforgeeks.org/coin-change-dp-7/)
+
+对于每个硬币，考虑使用和不使用该硬币时的情况，如果不这么做，容易出现重复的情况
+
+
+```python
+def countRecur(coins, n, sum):
+  
+    # If sum is 0 then there is 1 solution
+    # (do not include any coin)
+    if sum == 0:
+        return 1
+
+    # 0 ways in the following two cases
+    if sum < 0 or n == 0:
+        return 0
+
+    # count is sum of solutions (i)
+    # including coins[n-1] (ii) excluding coins[n-1]
+    return countRecur(coins, n, sum - coins[n - 1]) + \
+              countRecur(coins, n - 1, sum)
+
+def count(coins, sum):
+    return countRecur(coins, len(coins), sum)
+```
+
+一般情况下可以使用一个矩阵保存已经计算过的结果
+
+```python
+def countRecur_m(coins, n, sum, memo):
+    if sum == 0:
+        return 1
+    
+    if sum < 0 or n == 0:
+        return 0
+    
+    if memo[n][sum] != -1:
+        return memo[n][sum]
+
+    memo[n][sum] = countRecur_m(coins, n, sum - coins[n - 1], memo) + countRecur_m(coins, n - 1, sum, memo)
+    return memo[n][sum]
+
+def count_m(coins, sum):
+    memo = [[-1 for _ in range(sum + 1)] for _ in range(len(coins)+1)]
+    return countRecur_m(coins, len(coins), sum, memo)
+```
+
+>memo的初始化方式似乎需要注意一下，只能采用这种方法，不能采用 `[[-1] * a] * b` 这种形式，因为这样创建的第二个维度似乎会共享一片内存。
+
+
+
+### 求最长回文子字符串的长度
+
+[Length of longest palindrom>ic sub-string : Recursion - GeeksforGeeks](https://www.geeksforgeeks.org/length-of-longest-palindromic-sub-string-recursion/)
+
+递归中止情况是左右相等或左大于右，如果左右相等，那么将count+2，如果不相等的话，count变为0，分别计算一下左边加1和右边减1的情况。
+
+```python
+def longestPalindromic(strn, l, r, count):
+
+    if l > r:
+        return count
+    
+    if l == r:
+        return count + 1
+    
+    if strn[l] == strn[r]:
+        count = longestPalindromic(strn, l + 1, r - 1, count + 2)
+
+        return max(max(count, longestPalindromic(strn, l + 1, r, 0)), longestPalindromic(strn, l, r - 1, 0))
+    
+    return max(longestPalindromic(strn, l + 1, r, 0), longestPalindromic(strn, l, r - 1, 0))
+```
+
+>用count传入信息时，似乎不能简单的使用memo来简化操作
+
+### 二叉树的底部视图
+
+
+[Bottom View of a Binary Tree - GeeksforGeeks](https://www.geeksforgeeks.org/bottom-view-binary-tree/)
+
+
+### 生成数组的全部子集
+
+[Print all subsets of a given Set or Array - GeeksforGeeks](https://www.geeksforgeeks.org/backtracking-to-find-all-subsets/)
+
+解法1：从后向前，每次去除数组中的一个元素
+
+```python
+def get_all_subsets(arr, n, subs: list):
+    
+    if n == 0:
+        subs.append(arr)
+        return
+    get_all_subsets(arr[:n-1] + arr[n:], n-1, subs)
+    get_all_subsets(arr, n-1, subs)
+```
+
+解法2：从前到后，每次向结果中添加一个元素
+
+```python
+def get_all_subsets2(arr, l, idx, subs):
+    
+    if idx == len(arr):
+        subs.append(l[:])   # 注意需要使用切片
+        return
+
+    l.append(arr[idx])
+    get_all_subsets2(arr, l, idx+1, subs)
+
+    l.pop()
+    get_all_subsets2(arr, l, idx + 1, subs)
+```
+
+解法3：使用比特位来控制
+
+假设数组中有n个元素，那么子集合共有 $2^n$ 个，可以使用比特来表示，如共有3个元素，则可以用 0- 7这8个数字表示，0 表示三个位置都为0，即空集，7 三个位置都是1，即全集。
+
+```python
+# Iterating over all possible combinations using bit manipulation.
+for i in range(1 << len(arr)):
+	# Creating a list to store the current subset.
+	cur = []
+
+	# Iterating over each element of the array.
+	for j in range(len(arr)):
+		# Checking if the jth bit of i is set.
+		if i & (1 << j):
+			# If yes, then include that element in the subset.
+			cur.append(arr[j])
+
+	# Adding the current subset to the result list.
+	ans.append(cur)
+
+# Sorting the subsets in lexicographical order.
+ans.sort()
+```
+
+
+### 矩阵最短路径
+
+[Print all possible paths from top left to bottom right in matrix - GeeksforGeeks](https://www.geeksforgeeks.org/print-all-possible-paths-from-top-left-to-bottom-right-of-a-mxn-matrix/)
+
+求出所有从矩阵的左上方到右下方的最短路径
+
+每次添加一个路径节点，然后选择向下还是向右
+
+```python
+def findAllPossiblePaths(n : int, m : int, grid):
+	def get_all_possible_paths(grid, n, m, i,j, path, sols):
+		if i == n-1 and j == m-1:
+			sols.append(path[:]+[grid[-1][-1]])
+			return
+		
+		path.append(grid[i][j])
+		
+		if i < n-1:
+			get_all_possible_paths(grid, n, m, i+1,j, path, sols)
+		
+		if j < m - 1:
+			get_all_possible_paths(grid, n, m, i,j+1, path, sols)
+		
+		path.pop()
+		
+	path = []
+	sols = []
+	get_all_possible_paths(grid, n, m, 0, 0, path, sols)
+	return sols
+```
+
+### 生成平衡括号
+
+[Print all combinations of balanced parentheses - GeeksforGeeks](https://www.geeksforgeeks.org/print-all-combinations-of-balanced-parentheses/)
+
+```python
+def gen_parenthesis_util(n, open, close, s, ans):
+    
+    # If the count of both open and close parentheses 
+    # reaches n, it means we have generated a valid parentheses.
+    if open == n and close == n:
+        ans.append(s)
+        return
+
+    # At any index i in the generation of the string s,
+    # we can put an open parentheses only if its count 
+    # until that time is less than n.
+    if open < n:
+        gen_parenthesis_util(n, open + 1, close, s + "{", ans)
+
+    # At any index i in the generation of the string s,
+    # we can put a closed parentheses only if its count until 
+    # that time is less than the count of open parentheses.
+    if close < open:
+        gen_parenthesis_util(n, open, close + 1, s + "}", ans)
+
+def AllParenthesis(n):
+  
+    # List for storing the answer
+    ans = []
+    if n > 0:
+        gen_parenthesis_util(n, 0, 0, "", ans)
+    return ans
+```
+
+### 最长公共子序列
+
+[Longest Common Subsequence (LCS) - GeeksforGeeks](https://www.geeksforgeeks.org/longest-common-subsequence-dp-4/)
+
+这里的子序列允许不连续的情况出现
+
+从末尾开始匹配，i 和 j 分别代表当前长度
+
+```python
+def lcs(s1, s2):
+    def _lcs(s1, s2, i, j):
+        if i == 0 or j == 0:
+            return 0
+        
+        if s1[i-1] == s2[j-1]:
+            return 1 + _lcs(s1, s2, i-1, j-1)
+    
+        return max(_lcs(s1, s2, i-1, j), _lcs(s1, s2, i, j-1))     
+    cnt = _lcs(s1, s2, len(s1), len(s2))
+    return cnt
+```
+
+
+使用一个矩阵保存计算过的状态
+
+```python
+def lcs_m(s1, s2):
+    def _lcs(s1, s2, i, j, memo):
+        if i == 0 or j == 0:
+            return 0
+        
+        if memo[i][j] != -1:
+            return memo[i][j]
+        
+        if s1[i-1] == s2[j-1]:
+            memo[i][j] = 1 + _lcs(s1, s2, i-1, j-1, memo)
+            return memo[i][j]
+        memo[i][j] = max(_lcs(s1, s2, i-1, j, memo), _lcs(s1, s2, i, j-1, memo))  
+        return memo[i][j]
+    
+    memo = [[-1 for _ in range(len(s2) + 1)] for _ in range(len(s1) + 1)]
+    
+    cnt = _lcs(s1, s2, len(s1), len(s2), memo)
+
+    return cnt
+```
+
+
+### 递归排序栈
+
+[How to Sort a Stack using Recursion - GeeksforGeeks](https://www.geeksforgeeks.org/sort-a-stack-using-recursion/)
+
+```python
+def sort_stack(stack: list):
+    if len(stack) == 0:
+        return
+    
+    top = stack.pop()
+
+    sort_stack(stack)
+
+    temp = []
+
+    while len(stack) > 0 and stack[-1] > top:
+        temp.append(stack.pop())
+    
+    stack.append(top)
+
+    while len(temp) > 0:
+        stack.append(temp.pop())
+```
+
+
+### 翻转双向链表
+
+[Reverse a Doubly linked list using recursion - GeeksforGeeks](https://www.geeksforgeeks.org/reverse-doubly-linked-list-using-recursion/)
+
+
+### N-皇后问题
+
+[N Queen Problem - GeeksforGeeks](https://www.geeksforgeeks.org/n-queen-problem-backtracking-3/)
+
+
+### 数独问题
+
+[Algorithm to Solve Sudoku | Sudoku Solver - GeeksforGeeks](https://www.geeksforgeeks.org/sudoku-backtracking-7/)
+
+
+### 国王旅行问题
+
+[The Knight's tour problem - GeeksforGeeks](https://www.geeksforgeeks.org/the-knights-tour-problem/)
+
+
+## 动态规划
+
+
+### 硬币之和问题
+
+[Coin Change - Count Ways to Make Sum - GeeksforGeeks](https://www.geeksforgeeks.org/coin-change-dp-7/)
+
+```python
+def count_dp(coins, sum):
+    n1 = len(coins) + 1
+    dp = [[0  for _ in range(sum + 1)] for _ in range(n1)]
+
+    # sum 为 0 有一种方法（什么都不取）
+    for i in range(n1):
+        dp[i][0] = 1
+    
+    for i in range(1, n1):
+        for j in range(1, sum+1):
+            dp[i][j] = dp[i-1][j]
+            if j - coins[i-1] >= 0:
+                dp[i][j] += dp[i][j - coins[i-1]]
+    
+    return dp[len(coins)][sum]
+```
+
+### 最长公共子序列
+
+[Longest Common Subsequence (LCS) - GeeksforGeeks](https://www.geeksforgeeks.org/longest-common-subsequence-dp-4/)
+
+
+一般来说如果递归用的是从后向前，那么动态规划便是从前到后。
+
+```python
+def lcs_dp(s1, s2):
+    n1 = len(s1)
+    n2 = len(s2)
+    dp = [[0 for _ in range(n2+1)] for _ in range(n1 + 1)]
+
+    for i in range(1, n1+1, 1):
+        for j in range(1, n2+1, 1):
+            if s1[i-1] == s2[j-1]:
+                dp[i][j] = 1 + dp[i-1][j-1]
+            else:
+                dp[i][j] = max(dp[i-1][j], dp[i][j-1])
+    return dp[n1][n2]
+```
+
+
+上面的dp还可以使用一个一维数组来替代，节约空间
+
+```python
+def lcs_dp2(s1, s2):
+    n1 = len(s1)
+    n2 = len(s2)
+    dp = [0] * (n2 + 1)
+	for i in range(1, n1+1):
+        prev = dp[0]
+        for j in range(1, n2+1):
+            temp = dp[j]
+            if s1[i-1] == s2[j-1]:
+                dp[j] = 1 + prev
+            else:
+                dp[j] = max(dp[j-1], dp[j])
+            prev = temp
+    return dp[n2]
+```
+
