--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -3707,6 +3707,49 @@ def palPartition(s):
 ```
 
 
+### 获取所有的顺序子字符串
+
+回溯法
+
+```python
+def solve(s):
+    def _solve(s, idx, res, sols):
+        
+        if idx == len(s)+1:
+            return
+        if len(res) > 0:
+            sols.append(res)
+
+        for i in range(idx, len(s)):
+            res += s[i]
+            _solve(s, i+1, res, sols)
+            res = res[:-1]
+    
+    sols = []
+    _solve("".join(sorted(s)), 0, "", sols)
+    print(sols)
+
+solve("cab")
+```
+
+使用二进制mask实现
+
+```python
+def solve_b(s):
+
+    n = len(s)
+    sols = []
+    s = ''.join(sorted(s))
+
+    for i in range(1, 2 ** n):
+        mask = bin(i)[2:].zfill(n)
+        subs = "".join([s[j] for j in range(n) if mask[j] == "1"])
+        sols.append(subs)
+    sols.sort()
+    print(sols)
+```
+
+
 ### 打印所有的回文字符串（拆分字符串）
 
 [Print all Palindromic Partitions of a String using Backtracking - GeeksforGeeks](https://www.geeksforgeeks.org/given-a-string-print-all-possible-palindromic-partition/)
@@ -3731,6 +3774,7 @@ sols = []
 palPartitionRec(s, 0, [], sols)
 print(sols)
 ```
+
 
 只需要加上判断temp是否为回文的条件即可
 ```python
@@ -3792,6 +3836,499 @@ def wordBreak(s, dictionary):
 				if dp[j] and j == n-1:
 					return True
 	return False
+```
+
+
+### 获取字符串中的异序词对
+
+[Count of total anagram substrings - GeeksforGeeks](https://www.geeksforgeeks.org/count-total-anagram-substrings/)
+
+异序词对指两个词之间字母种类和数量相同，但是排列顺序不同。
+
+首先获取所有的子字符串，对每个子字符串排序后塞入字典中，对于出现次数大于1的子字符串，可能的异序词对为 $C_n^2$
+
+
+### 统计没有连续1的二进制字符串个数
+
+[Count number of binary strings without consecutive 1's - GeeksforGeeks](https://www.geeksforgeeks.org/count-number-binary-strings-without-consecutive-1s/)
+
+```python
+def solve(n):
+
+    def _solve(s, n, last):
+        if n == 1:
+            if last == "1":
+                return 1
+            else:
+                return 2
+        cnt = 0
+        if last == "0":
+            cnt += _solve(s, n-1, "0")
+            cnt += _solve(s, n-1, "1")
+        else:
+            cnt += _solve(s, n-1, "0")
+        
+        return cnt
+    s = ""
+    cnt = _solve(s, n-1, "0") + _solve(s, n-1, "1")
+    print(cnt)
+```
+
+带记忆矩阵的
+
+```python
+def solve_m(n):
+
+    def _solve(memo, n, last):
+        if n == 1:
+            if last == "1":
+                return 1
+            else:
+                return 2
+        
+        if memo[n][int(last)] != -1:
+            return memo[n][int(last)]
+
+        cnt = 0
+        if last == "0":
+            cnt += _solve(memo, n-1, "0")
+            cnt += _solve(memo, n-1, "1")
+            memo[n][int(last)] = cnt
+        else:
+            cnt += _solve(memo, n-1, "0")
+            memo[n][int(last)] = cnt
+        
+        return cnt
+    
+    memo = [[-1, -1] for _ in range(n)]
+    cnt = _solve(memo, n-1, "0") + _solve(memo, n-1, "1")
+    print(cnt)
+```
+
+动态规划
+
+```python
+def solve_dp(n):
+
+    dp = [[0, 0] for _ in range(n)]  # 第 i 位为0或1时的可能性
+
+    # 如果字符串长度为 1，那么只有 dp[0][0] + dp[0][1] = 2 种可能性
+    dp[0][0] = 1
+    dp[0][1] = 1
+
+    for i in range(1, n):
+        dp[i][0] = dp[i-1][0] + dp[i-1][1]
+        dp[i][1] = dp[i-1][0]
+
+    cnt = dp[n-1][0] + dp[n-1][1]
+    print(cnt)
+```
+
+
+### 判断字符串是否能被拆分四个不同的子字符串
+
+[Check if given string can be split into four distinct strings - GeeksforGeeks](https://www.geeksforgeeks.org/check-given-string-can-split-four-distinct-strings/)
+
+对于长度大于等于10的字符串来说，必定可以拆分为长度为1、2、3、4的子字符串，所以只需要考虑长度小于10的字符串
+
+```python
+def solve(s):
+    if len(s) >= 10:
+        return True
+    
+    n = len(s)
+    for i in range(0, n-3):
+        for j in range(i+1, n-2):
+            for k in range(j+1, n-1):
+                s1 = s[:i+1]
+                s2 = s[i+1:j+1]
+                s3 = s[j+1:k+1]
+                s4 = s[k+1:]
+
+                if s1 != s2 and s1 != s3 and s1 != s4 \
+                and s2 != s3 and s2 != s4 and s3 != s4:
+                    return True
+    return False
+```
+
+
+### 最长平衡子序列
+
+[Length of Longest Balanced Subsequence - GeeksforGeeks](https://www.geeksforgeeks.org/length-longest-balanced-subsequence/)
+
+
+### 平衡子序列的最小相邻交换次数
+
+[Min Adjacent Swaps for Bracket Balancing - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-swaps-bracket-balancing/)
+
+注意这里计算的相邻交换，所以像 `]][[` 这种需要三次相邻交换。
+
+```python
+def minimumNumberOfSwaps(s):
+
+	cnt = 0
+	n = len(s)
+	c1 = 0
+	c2 = 0
+	for i in range(n):
+		if s[i] == "[":
+			c1 += 1
+		else:
+			c2 += 1
+			cnt += max(0, c2 - c1)
+	return cnt
+```
+
+
+### 给定序列的最小数
+
+[Form minimum number from given sequence - GeeksforGeeks](https://www.geeksforgeeks.org/form-minimum-number-from-given-sequence/)
+
+
+### 增加最长公共子序列的方式
+
+[Count ways to increase LCS length of two strings by one - GeeksforGeeks](https://www.geeksforgeeks.org/count-ways-increase-lcs-length-two-strings-one/)
+
+有两个序列，现在向第一个序列中添加一个元素，使得两个序列的最长公共子序列增加1，请问有多少种方式
+
+使用动态规划的方法，在第一个字符串中添加一个元素，为了使最长公共子序列加1，那就要这个元素匹配到第二个序列的某个元素，即删除掉第二个序列的这个元素后，仍然能够保证最长公共子序列长度不变。
+
+```python
+def solve(s1, s2):
+
+    n1 = len(s1)
+    n2 = len(s2)
+    positions = {}
+    for i in range(n2):
+        if s2[i] in positions:
+            positions[s2[i]].append(i+1)
+        else:
+            positions[s2[i]] = [i+1]
+    
+    lcs = [[0 for _ in range(n2+2)] for _ in range(n1+2)]
+    # lcs[i][j]: s1[0...i] 和 s2[0...j] 的最长公共长度
+    for i in range(1, n1+1):
+        for j in range(1, n2+1):
+            if s1[i-1] == s2[j-1]:
+                lcs[i][j] = 1 + lcs[i-1][j-1]
+            else:
+                lcs[i][j] = max(lcs[i][j-1], lcs[i-1][j])
+    
+    lcsr = [[0 for _ in range(n2+2)] for _ in range(n1+2)]
+
+    # lcsr[i][j]: s1[i...n1] 和 s2[j...n2] 的最长公共子序列长度
+    for i in range(n1, 0, -1):
+        for j in range(n2, 0, -1):
+            if s1[i-1] == s2[j-1]:
+                lcsr[i][j] = 1 + lcsr[i+1][j+1]
+            else:
+                lcsr[i][j] = max(lcsr[i+1][j], lcsr[i][j+1])
+    
+    ways = 0
+
+    for i in range(n1+1):
+        for c in range(26):
+            if chr(c+97) in positions:
+                for j in range(len(positions[chr(c+97)])):
+                    p = positions[chr(c+97)][j]
+
+                    if lcs[i][p-1] + lcsr[i+1][p+1] == lcs[n1][n2]:
+                        ways += 1
+    return ways
+```
+
+
+
+### 判断字符串数组能否被串联起来
+
+[Find if an array of strings can be chained to form a circle | Set 2 - GeeksforGeeks](https://www.geeksforgeeks.org/find-array-strings-can-chained-form-circle-set-2/)
+
+
+### 外星人字典
+
+[Alien Dictionary - GeeksforGeeks](https://www.geeksforgeeks.org/given-sorted-dictionary-find-precedence-characters/)
+
+根据排序顺序，找到字符顺序
+
+
+### 最小词表分解次数
+
+[Minimum Word Break - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-word-break/)
+
+自己的解法（不一定正确），参考判断一句话能否被给定词表分解问题的解法
+
+```python
+def solve(s, d):
+    n = len(s)
+    dp = [None] * n
+
+    if s in d:
+        return 0
+
+    temp = ""
+    for i in range(n):
+        temp += s[i]
+        if temp in d:
+            dp[i] = 0
+
+        if dp[i] is not None:
+            if i == n-1:
+                return dp[i] - 1
+            tmp = ""
+            for j in range(i+1, n):
+                tmp += s[j]
+                if tmp in d:
+                    dp[j] = dp[i] + 1
+                
+    return dp[n-1] - 1
+```
+
+官方解法
+
+```python
+def min_word_break(s, dict):
+    n = len(s)
+    dp = [float('inf')] * (n + 1)  # Initialize a list to store minimum word breaks needed
+    dp[0] = 0  # No breaks needed for an empty string
+
+    for i in range(1, n + 1):
+        for word in dict:
+            length = len(word)
+            if i >= length and s[i - length:i] == word:
+                # Check if the substring from i-length to i matches a word in the dictionary
+                dp[i] = min(dp[i], dp[i - length] + 1)
+                # Update the minimum word breaks needed at position i
+
+    return dp[n] - 1  # Return the minimum word breaks needed for the entire string
+```
+
+
+
+### 词搜索
+
+在二维数据中搜索某个词：[Word Search in a 2D Grid of characters - GeeksforGeeks](https://www.geeksforgeeks.org/search-a-word-in-a-2d-grid-of-characters/)
+
+[Word Search - Check if a word exists in a grid or not - GeeksforGeeks](https://www.geeksforgeeks.org/check-if-a-word-exists-in-a-grid-or-not/)
+
+```python
+def solve(mat, word):
+    def _solve(mat, word, x, y, idx):
+
+        if idx == len(word):
+            return True
+        
+        m = len(mat)
+        n = len(mat[0])
+
+        if x < 0 or y < 0 or x >= m or y >= n:
+            return False
+        
+        if mat[x][y] == word[idx]:
+
+            temp = mat[x][y]
+            mat[x][y] = "#"   # 标记此处已经搜索过了
+
+            result = _solve(mat, word, x + 1, y, idx+1) or \
+            _solve(mat, word, x-1, y, idx+1) or _solve(mat, word, x, y+1, idx+1) \
+            or _solve(mat, word, x, y- 1, idx+1)
+
+            mat[x][y] = temp
+
+            return result
+        return False
+
+    m = len(mat)
+    n = len(mat[0])
+
+    if len(word) > m * n:
+        return False
+    
+    for i in range(m):
+        for j in range(n):
+            if mat[i][j] == word[0]:
+                if _solve(mat, word, i, j, 0):
+                    return True
+    return False
+```
+
+
+### 使得括号是否平衡的最小转变次数
+
+[Minimum number of bracket reversals needed to make an expression balanced - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-number-of-bracket-reversals-needed-to-make-an-expression-balanced/)
+首先需要保证括号数量为偶数。
+
+一种递归的方法是，对于字符串中的每个 `{` 都进行翻转，如果是 `{` 就转成 `}`，反之转成 `{`，再判断翻转后的字符串是否平衡。
+
+```python
+def recur(expr, n, ind, change, ans):
+    # When we've covered the whole string, check if it's balanced
+    if ind == n:
+        if isBalanced(expr):
+            ans[0] = min(ans[0], change)   # ans 是一个列表，方便保存结果
+        return
+
+    # Keep the bracket as it is
+    recur(expr, n, ind + 1, change, ans)
+
+    # Reverse the bracket
+    if expr[ind] == '{':
+        expr = expr[:ind] + '}' + expr[ind + 1:]
+    else:
+        expr = expr[:ind] + '{' + expr[ind + 1:]
+    recur(expr, n, ind + 1, change + 1, ans)
+```
+
+
+另一种方法是删除字符串中所有的已经平衡的括号，然后剩下的只能是类似 `}}}{{{` 这种形式，假设有 `m` 个 `{` 和 `n` 个 `}`，则最小转变次数为 `ceil(m/2)+ceil(n/2)`（分别将 `{` 和 `}` 中的一半转变）
+
+```python
+def countMinReversals(expr):
+
+    lenn = len(expr)
+
+    # length of expression must be even
+    # to make it balanced by using reversals.
+    if (lenn % 2):
+        return -1
+
+    # After this loop, stack contains
+    # unbalanced part of expression,
+    # i.e., expression of the form "...."
+    s = []
+    for i in range(lenn):
+        if (expr[i] == '}' and len(s)):
+
+            if (s[0] == '{'):
+                s.pop(0)
+            else:
+                s.insert(0, expr[i])
+        else:
+            s.insert(0, expr[i])
+
+    # Length of the reduced expression
+    # red_len = (m+n)
+    red_len = len(s)
+
+    # count opening brackets at the
+    # end of stack
+    n = 0
+    while (len(s)and s[0] == '{'):
+        s.pop(0)
+        n += 1
+
+    # return ceil(m/2) + ceil(n/2) which
+    # is actually equal to (m+n)/2 + n%2
+    # when m+n is even.
+    return (red_len // 2 + n % 2)
+```
+
+
+### 词换行问题
+
+[Word Wrap Problem - GeeksforGeeks](https://www.geeksforgeeks.org/word-wrap-problem-dp-19/)
+
+
+自己的解法（会超时），每次递归时传入 idx （目前索引的arr元素），row 为当前行的长度
+
+```python
+def solve_m(arr, k):
+
+    def _solve(arr, idx, row, k, memo):
+        if idx == len(arr):
+            return 0
+        
+        if memo[idx][row] != -1:
+            return memo[idx][row]
+
+        cost = 0
+        if row != 0:
+            nr = arr[idx] + 1 + row
+        else:
+            nr = arr[idx]
+        
+        if nr <= k:
+	        # 换到下一行更好还是在本行更好
+            cost = min( (k - row) ** 2 + _solve(arr, idx+1, arr[idx], k, memo),  _solve(arr, idx+1, nr, k, memo))
+        else:
+	        # 换到下一行
+            cost = (k - row) ** 2 + _solve(arr, idx+1, arr[idx], k, memo)
+        memo[idx][row] = cost
+        return cost
+    
+    memo = [[-1 for _ in range(k+1)] for _ in range(len(arr))]
+    cost = _solve(arr, 0, 0, k, memo)
+    return cost
+```
+
+
+官方解法（回溯法，未添加memo），添加memo后，这种回溯方法对于memo的利用会更高，将row放到循环里面了。
+
+```python
+import sys
+ 
+def calculateCost(curr, n, arr, k):
+    # Base case: If current index is beyond or at the last word, no cost
+    if curr >= n:
+        return 0
+
+    # Keeps track of the current line's total character count
+    sum = 0
+
+    # Initialize with a large value to find the minimum cost
+    ans = sys.maxsize
+
+    # Try placing words from the current position to the next
+    for i in range(curr, n):
+      
+        # Add the length of the current word
+        sum += arr[i]
+
+        # Including spaces between words
+        tot = sum + (i - curr)
+
+        # If the total exceeds the line width, break out of the loop
+        if tot > k:
+            break
+
+        # If this is not the last word in the array, compute the 
+        # cost for the next line
+        if i != n - 1:
+            temp = (k - tot) * (k - tot) + calculateCost(i + 1, n, arr, k)
+            ans = min(ans, temp)
+            
+        # If it's the last word, there's no cost added
+        else:
+            ans = 0
+    return ans
+
+def solveWordWrap(arr, k):
+    n = len(arr)
+    return calculateCost(0, n, arr, k)
+```
+
+
+动态规划
+
+```python
+def solve_dp(arr, k):
+    n = len(arr)
+    dp = [float("inf") for _ in range(n+1)]
+
+    for curr in range(n-1, -1, -1):
+        s = 0
+        for i in range(curr, n):
+            s += arr[i]
+            tot = s + i - curr
+
+            if tot > k:
+                break
+
+            if i != n-1:
+                dp[curr] = min(dp[curr], dp[i+1] + (k - tot) * (k - tot))
+            else:
+                dp[curr] = min(dp[curr], 0)
+    return dp[0]
+
 ```
 
 
