--- a/工具使用.md
+++ b/工具使用.md
@@ -1,5 +1,28 @@
 
 
+# EndNote
+
+
+一款文献管理工具
+
+先关闭word等office软件，安装完EndNote后，word中会有对应的插件
+
+使用方法如下
+
+1、在google scholar 中搜索文献，并将文件保存到我的图书馆中
+
+![](./images/endnote/google_scholar_save.png)
+
+2、将所有的文献全部保存好之后，在我的图书馆中点击全部导出->endnote
+
+![](./images/endnote/google_scholar_export_all.png)
+
+3、导出后的文件双击即可导入endnote中，如果需要插入word，可以直接将光标放到插入的位置上，然后在Endnote中点击插入
+
+![](./images/endnote/endnote_insert.png)
+
+
+
 # Gradle
 
 Gradle 是一套编译工具，可用于 java、kotlin、scala、C++ 等语言的编译构建。
